source/styling/notes.css
/*Body*/
body {
    background: linear-gradient( #221C35 30.73%, rgba(75, 54, 95, 0) 91.67%), #4B365F;
    background-repeat: no-repeat;
    display: flex;
    flex-direction: column;
    align-items: center;
}

/*Back Button*/
a {
    font-size: 3vw;
    margin: 5px;
}

a:active {
    color: #D6CDF2
}

/*Header*/
header {
    width: 90%;
    display: flex;
    flex-direction: column;
    align-items: left;
}

#subheader {
    margin: 10px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

#notes-info {
    display: flex;
    flex-direction: column;
}

#notes-title, #notes-last-modified {
    background-color: white;
    padding: 5px 100px 5px 5px;
    font-size: 20px;
    font-family: 'Poppins', sans-serif;
    font-weight: bolder;
    color: #221C35;
    filter: drop-shadow(0px 0px 5px black);
    background: linear-gradient( white 30.73%, rgba(75, 54, 95, 0) 91.67%), #D6CDF2;
    margin-bottom: 20px;
}

/*Save Button*/
button {
    font-family: 'Poppins', sans-serif;
    font-size: 1.5em;
    font-weight: bolder;
    color: black;
    background-color: #D6CDF2;
    border-radius: 10px;
    filter: drop-shadow(0px 0px 5px black);
}
@media only screen and (max-width: 800px) {
    button { 
       font-size: 1em; 
    }
}

button:hover {
    background-color: #B8B0D9;
    cursor: pointer;
}

/*Text Area*/
main {
    width: 90%;
    height: 60vh;
}

textarea {
    width: 100%;
    height: 100%;
    outline: none;
    overflow-y: scroll;
    padding: 20px;
    font-family: 'Poppins', sans-serif;
    font-size: 1vw;
    color: #221C35;
    background: linear-gradient( white 30.73%, rgba(75, 54, 95, 0) 91.67%), #D6CDF2;
    border-radius: 10px;
}

